--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "fastclick": "^1.0.6",
+    "qiniu-js": "^2.5.4",
     "sass-resources-loader": "^2.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
