--- a/.babelrc
+++ b/.babelrc
@@ -5,5 +5,15 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-runtime", "transform-vue-jsx"]
+  "plugins": [
+    "transform-runtime", 
+    "transform-vue-jsx",
+    [
+      "component",
+      {
+        "libraryName": "element-ui",
+        "styleLibraryName": "theme-chalk"
+      }
+    ]
+  ]
 }
