--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sass-resources-loader": "^2.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-video-player": "^5.0.2",
     "vuex": "^3.1.0",
     "vuex-i18n": "^1.3.1",
     "vux": "^2.2.0"
