我的二维码

--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "axios": "^0.18.0",
     "fastclick": "^1.0.6",
     "qiniu-js": "^2.5.4",
+    "qrcode": "^1.4.2",
+    "qrcodejs2": "0.0.2",
     "qs": "^6.7.0",
     "sass-resources-loader": "^2.0.0",
     "vue": "^2.5.2",
+    "vue-qr": "^2.1.0",
     "vue-router": "^3.0.1",
     "vue-video-player": "^5.0.2",
     "vuex": "^3.1.0",
