学习计划模块第一次提交

--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "axios": "^0.18.0",
     "fastclick": "^1.0.6",
+    "js-audio-recorder": "^0.5.4",
     "qiniu-js": "^2.5.4",
     "qrcode": "^1.4.2",
     "qrcodejs2": "0.0.2",
     "qs": "^6.7.0",
     "sass-resources-loader": "^2.0.0",
     "vue": "^2.5.2",
+    "vue-i18n": "^8.15.3",
     "vue-qr": "^2.1.0",
     "vue-router": "^3.0.1",
     "vue-video-player": "^5.0.2",
@@ -61,7 +63,7 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "vux-loader": "^1.0.56",
+    "vux-loader": "^1.2.9",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.10.0",
