--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "vue-video-player": "^5.0.2",
     "vuex": "^3.1.0",
     "vuex-i18n": "^1.3.1",
-    "vux": "^2.2.0"
+    "vux": "^2.2.0",
+    "weixin-js-sdk": "^1.4.0-test"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
